--- a/src/view/menu.fxml
+++ b/src/view/menu.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GroupController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainView">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -14,11 +13,27 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="500.0">
+      <AnchorPane prefHeight="314.0" prefWidth="460.0">
          <children>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="New" />
-            <Button layoutX="14.0" layoutY="51.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Edit" />
-            <Button layoutX="14.0" layoutY="88.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Delete" />
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onNewContactPressed" prefHeight="25.0" prefWidth="70.0" text="New" />
+            <Button layoutX="93.0" layoutY="14.0" mnemonicParsing="false" onAction="#onSaveContactPressed" prefHeight="25.0" prefWidth="70.0" text="Save" />
+            <Button layoutX="173.0" layoutY="14.0" mnemonicParsing="false" onAction="#onDeleteContactPressed" prefHeight="25.0" prefWidth="70.0" text="Delete" />
+            <Label layoutX="14.0" layoutY="55.0" text="First Name" />
+            <Label layoutX="14.0" layoutY="90.0" text="Last Name" />
+            <Label layoutX="14.0" layoutY="125.0" text="Phone" />
+            <TextField fx:id="txtFirstName" layoutX="93.0" layoutY="51.0" />
+            <TextField fx:id="txtLastName" layoutX="93.0" layoutY="86.0" />
+            <TextField fx:id="txtPhone" layoutX="93.0" layoutY="121.0" />
+            <ComboBox fx:id="cmbGroup" layoutX="93.0" layoutY="156.0" prefWidth="150.0" />
+            <Label layoutX="14.0" layoutY="160.0" text="Group" />
+            <Button layoutX="14.0" layoutY="207.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="New" />
+            <Button layoutX="93.0" layoutY="207.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Save" />
+            <Button layoutX="172.0" layoutY="207.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Delete" />
+            <ListView fx:id="lvGroups" layoutX="257.0" layoutY="207.0" prefHeight="95.0" prefWidth="191.0" />
+            <Label layoutX="14.0" layoutY="248.0" text="Name" />
+            <TextField fx:id="txtGroupName" layoutX="63.0" layoutY="244.0" prefHeight="25.0" prefWidth="178.0" />
+            <Separator layoutX="14.0" layoutY="193.0" prefHeight="0.0" prefWidth="433.0" />
+            <ListView fx:id="lvContacts" layoutX="257.0" layoutY="15.0" onMouseClicked="#onContactSelect" prefHeight="166.0" prefWidth="191.0" />
          </children></AnchorPane>
    </children>
 </GridPane>
