--- a/src/main/resources/contactList.fxml
+++ b/src/main/resources/contactList.fxml
@@ -4,6 +4,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane prefHeight="350.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ContactsView">
    <children>
-      <ListView id="lvContacts" prefHeight="350.0" prefWidth="200.0" />
+      <ListView fx:id="lvContacts" prefHeight="350.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
