--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainView">
+<GridPane alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="460.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainView">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -26,12 +26,12 @@
             <TextField fx:id="txtPhone" layoutX="93.0" layoutY="121.0" />
             <ComboBox fx:id="cmbGroup" layoutX="93.0" layoutY="156.0" prefWidth="150.0" />
             <Label layoutX="14.0" layoutY="160.0" text="Group" />
-            <Button layoutX="14.0" layoutY="207.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="New" />
-            <Button layoutX="93.0" layoutY="207.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Save" />
-            <Button layoutX="172.0" layoutY="207.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Delete" />
-            <ListView fx:id="lvGroups" layoutX="257.0" layoutY="207.0" prefHeight="95.0" prefWidth="191.0" />
-            <Label layoutX="14.0" layoutY="248.0" text="Name" />
-            <TextField fx:id="txtGroupName" layoutX="63.0" layoutY="244.0" prefHeight="25.0" prefWidth="178.0" />
+            <Button layoutX="14.0" layoutY="207.0" mnemonicParsing="false" onAction="#onNewGroupPressed" prefHeight="25.0" prefWidth="70.0" text="New" />
+            <Button layoutX="93.0" layoutY="207.0" mnemonicParsing="false" onAction="#onSaveGroupPressed" prefHeight="25.0" prefWidth="70.0" text="Save" />
+            <Button layoutX="172.0" layoutY="207.0" mnemonicParsing="false" onAction="#onDeleteGroupPressed" prefHeight="25.0" prefWidth="70.0" text="Delete" />
+            <ListView fx:id="lvGroups" layoutX="257.0" layoutY="207.0" onMouseClicked="#onGroupSelect" prefHeight="95.0" prefWidth="191.0" />
+            <Label layoutX="14.0" layoutY="248.0" text="Group Name" />
+            <TextField fx:id="txtGroupName" layoutX="92.0" layoutY="244.0" prefHeight="25.0" prefWidth="149.0" />
             <Separator layoutX="14.0" layoutY="193.0" prefHeight="0.0" prefWidth="433.0" />
             <ListView fx:id="lvContacts" layoutX="257.0" layoutY="15.0" onMouseClicked="#onContactSelect" prefHeight="166.0" prefWidth="191.0" />
          </children></AnchorPane>
