--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="460.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainView">
+<GridPane alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="348.0" prefWidth="460.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainView">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -13,27 +13,35 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <AnchorPane prefHeight="314.0" prefWidth="460.0">
+      <AnchorPane prefHeight="394.0" prefWidth="460.0">
          <children>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onNewContactPressed" prefHeight="25.0" prefWidth="70.0" text="New" />
-            <Button layoutX="93.0" layoutY="14.0" mnemonicParsing="false" onAction="#onSaveContactPressed" prefHeight="25.0" prefWidth="70.0" text="Save" />
-            <Button layoutX="173.0" layoutY="14.0" mnemonicParsing="false" onAction="#onDeleteContactPressed" prefHeight="25.0" prefWidth="70.0" text="Delete" />
-            <Label layoutX="14.0" layoutY="55.0" text="First Name" />
-            <Label layoutX="14.0" layoutY="90.0" text="Last Name" />
-            <Label layoutX="14.0" layoutY="125.0" text="Phone" />
-            <TextField fx:id="txtFirstName" layoutX="93.0" layoutY="51.0" />
-            <TextField fx:id="txtLastName" layoutX="93.0" layoutY="86.0" />
-            <TextField fx:id="txtPhone" layoutX="93.0" layoutY="121.0" />
-            <ComboBox fx:id="cmbGroup" layoutX="93.0" layoutY="156.0" prefWidth="150.0" />
-            <Label layoutX="14.0" layoutY="160.0" text="Group" />
-            <Button layoutX="14.0" layoutY="207.0" mnemonicParsing="false" onAction="#onNewGroupPressed" prefHeight="25.0" prefWidth="70.0" text="New" />
-            <Button layoutX="93.0" layoutY="207.0" mnemonicParsing="false" onAction="#onSaveGroupPressed" prefHeight="25.0" prefWidth="70.0" text="Save" />
-            <Button layoutX="172.0" layoutY="207.0" mnemonicParsing="false" onAction="#onDeleteGroupPressed" prefHeight="25.0" prefWidth="70.0" text="Delete" />
-            <ListView fx:id="lvGroups" layoutX="257.0" layoutY="207.0" onMouseClicked="#onGroupSelect" prefHeight="95.0" prefWidth="191.0" />
-            <Label layoutX="14.0" layoutY="248.0" text="Group Name" />
-            <TextField fx:id="txtGroupName" layoutX="92.0" layoutY="244.0" prefHeight="25.0" prefWidth="149.0" />
-            <Separator layoutX="14.0" layoutY="193.0" prefHeight="0.0" prefWidth="433.0" />
-            <ListView fx:id="lvContacts" layoutX="257.0" layoutY="15.0" onMouseClicked="#onContactSelect" prefHeight="166.0" prefWidth="191.0" />
+            <Button layoutX="14.0" layoutY="11.0" mnemonicParsing="false" onAction="#onNewContactPressed" prefHeight="25.0" prefWidth="70.0" text="New" />
+            <Button layoutX="93.0" layoutY="11.0" mnemonicParsing="false" onAction="#onSaveContactPressed" prefHeight="25.0" prefWidth="70.0" text="Save" />
+            <Button layoutX="173.0" layoutY="11.0" mnemonicParsing="false" onAction="#onDeleteContactPressed" prefHeight="25.0" prefWidth="70.0" text="Delete" />
+            <Label layoutX="14.0" layoutY="87.0" text="First Name" />
+            <Label layoutX="14.0" layoutY="122.0" text="Last Name" />
+            <Label layoutX="14.0" layoutY="157.0" text="Phone" />
+            <TextField fx:id="txtFirstName" layoutX="93.0" layoutY="83.0" />
+            <TextField fx:id="txtLastName" layoutX="93.0" layoutY="118.0" />
+            <TextField fx:id="txtPhone" layoutX="93.0" layoutY="153.0" />
+            <ComboBox fx:id="cmbGroup" layoutX="93.0" layoutY="188.0" prefWidth="150.0" />
+            <Label layoutX="14.0" layoutY="192.0" text="Group" />
+            <Button layoutX="14.0" layoutY="241.0" mnemonicParsing="false" onAction="#onNewGroupPressed" prefHeight="25.0" prefWidth="70.0" text="New" />
+            <Button layoutX="93.0" layoutY="241.0" mnemonicParsing="false" onAction="#onSaveGroupPressed" prefHeight="25.0" prefWidth="70.0" text="Save" />
+            <Button layoutX="172.0" layoutY="241.0" mnemonicParsing="false" onAction="#onDeleteGroupPressed" prefHeight="25.0" prefWidth="70.0" text="Delete" />
+            <ListView fx:id="lvGroups" layoutX="257.0" layoutY="241.0" onMouseClicked="#onGroupSelect" prefHeight="95.0" prefWidth="191.0" />
+            <Label layoutX="14.0" layoutY="312.0" text="Group Name" />
+            <TextField fx:id="txtGroupName" layoutX="92.0" layoutY="308.0" prefHeight="25.0" prefWidth="149.0" />
+            <Separator layoutX="14.0" layoutY="225.0" prefHeight="0.0" prefWidth="433.0" />
+            <ListView fx:id="lvContacts" layoutX="257.0" layoutY="82.0" onMouseClicked="#onContactSelect" prefHeight="131.0" prefWidth="191.0" />
+            <Label layoutX="14.0" layoutY="54.0" text="ID" />
+            <Label fx:id="lblContactID" layoutX="93.0" layoutY="54.0" />
+            <Label layoutX="14.0" layoutY="280.0" text="ID" />
+            <Label fx:id="lblGroupID" layoutX="92.0" layoutY="280.0" />
+            <TextField fx:id="txtSearch" layoutX="317.0" layoutY="11.0" prefHeight="25.0" prefWidth="129.0" />
+            <Label layoutX="257.0" layoutY="15.0" text="Search" />
+            <Label layoutX="257.0" layoutY="54.0" text="By group" />
+            <ComboBox fx:id="cmbGroupFilter" layoutX="318.0" layoutY="50.0" onAction="#onGroupFilter" prefHeight="25.0" prefWidth="129.0" />
          </children></AnchorPane>
    </children>
 </GridPane>
